--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,81 +1,101 @@
 @import url("./keyframes.css");
 
-body, html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    scroll-behavior: smooth;
-    background-color: #000; 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  scroll-behavior: smooth;
+  background-color: #000;
 }
 header {
-    background-color: #000;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: relative;
+  background-color: #000;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  position: relative;
 
-    & img {
-        max-width: 50%;
-        height: auto;
-        opacity: 0;
-        transform: translateY(-20px);
-        animation: fadeIn 2.0s ease-out forwards;
-    }
-
+  & img {
+    max-width: 50%;
+    height: auto;
+    opacity: 0;
+    transform: translateY(-20px);
+    animation: fadeIn 2s ease-out forwards;
+  }
 }
 
 .btn-custom {
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 1.2rem;
-    background-color: #dc3545;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-    transition: background-color 0.3s ease;
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
 
-    &:hover {
-        background-color: #c82333;
-    }
-
+  &:hover {
+    background-color: #c82333;
+  }
 }
 section {
-    padding: 100px 20px;
-    text-align: center;
+  padding: 100px 20px;
+  text-align: center;
 }
 .section-light {
-    background-color: #f8f9fa;
-    color: #333;
+  background-color: #f8f9fa;
+  color: #333;
 }
 .section-dark {
-    background-color: #212529;
-    color: #fff;
+  background-color: #212529;
+  color: #fff;
 }
 footer {
-    background-color: #212529;
+  background-color: #212529;
+  color: #fff;
+  padding: 40px 20px;
+  text-align: center;
+
+  & .social-icons a {
+    margin: 0 15px;
     color: #fff;
-    padding: 40px 20px;
-    text-align: center;
+    font-size: 1.5rem;
+    transition: color 0.3s;
 
-    & .social-icons a {
-        margin: 0 15px;
-        color: #fff;
-        font-size: 1.5rem;
-        transition: color 0.3s;
-
-        &:hover {
-            color: #dc3545;
-        }
+    &:hover {
+      color: #dc3545;
     }
-
+  }
 }
 
-.container, .row, .col, .col-md-4, .col-12 {
-    overflow: hidden; /* Impede que o conteúdo ultrapasse a largura da tela */
+.container,
+.row,
+.col,
+.col-md-4,
+.col-12 {
+  overflow: hidden; /* Impede que o conteúdo ultrapasse a largura da tela */
+}
+
+#sobre-nos h2 {
+  font-size: 60px;
+  color: #00ff00;
+  /* Verde neon */
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
+.font-branca {
+  color: white;
+}
+
+#sobre-nos {
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.2)),
+    url("../assets/images/fotoInicio.jpg") no-repeat center center;
+  background-size: cover;
 }
