--- a/src/css/main.css
+++ b/src/css/main.css
@@ -90,6 +90,14 @@ footer {
   font-weight: bold;
 }
 
+#horarios h2 {
+  font-size: 60px;
+  color: #00ff00;
+  /* Verde neon */
+  margin-bottom: 30px;
+  font-weight: bold;
+}
+
 .font-branca {
   color: white;
 }
